--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,19 +1,24 @@
 {
-	"nodeModulesDir": "auto",
-	"npm": {
-		"specifiers": []
-	},
-	"imports": {
-		"@std/testing": "jsr:@std/testing@^1.0.12"
-	},
-	"tasks": {
-		"start": "deno run --allow-net --watch=static/,routes/,data/ dev.ts",
-		"test": "deno test --allow-net --allow-env --env-file=.env.test --coverage=coverage",
-		"lcov": "deno coverage --lcov coverage/ > coverage.lcov",
-		"lint": "deno lint"
-	},
-	"fmt": {
-		"useTabs": true,
-		"indentWidth": 4
-	}
+  "nodeModulesDir": "auto",
+  "lock": false,
+  "npm": {
+    "specifiers": []
+  },
+  "imports": {
+    "@std/testing": "jsr:@std/testing@^1.0.12",
+    "@std/assert": "jsr:@std/assert@^1.0.12",
+    "@std/testing/mock": "jsr:@std/testing@^1.0.12/mock",
+    "@hono/hono": "jsr:@hono/hono@^4.6.3",
+    "@hono/hono/logger": "jsr:@hono/hono@^4.6.3/logger"
+  },
+  "tasks": {
+    "start": "deno run --allow-net --watch=static/,routes/,data/ dev.ts",
+    "test": "deno test --allow-net --allow-env --env-file=.env.test --coverage=coverage",
+    "lcov": "deno coverage --lcov coverage/ > coverage.lcov",
+    "lint": "deno lint"
+  },
+  "fmt": {
+    "useTabs": true,
+    "indentWidth": 4
+  }
 }
