--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd supabase/functions
-          deno test --allow-net --allow-env --coverage=coverage kuala/
+          deno test --allow-net --allow-env --coverage=coverage kuala/  --junit-path=test_report.xml
 
       - name: Generate coverage report
         run: |
@@ -80,11 +80,15 @@ jobs:
           fail_ci_if_error: false
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Coverage Summary
-        run: |
-          cd supabase/functions
-          deno coverage coverage/ --reporter=pretty-print
+          
+      - name: Test Reporter
+        uses: dorny/test-reporter@v1
+        if: success()
+        with:
+          name: Deno Tests
+          path: "./supabase/functions/test_report.xml"
+          reporter: java-junit
+          fail-on-error: true
 
   build:
     name: Build & Validate
@@ -136,13 +140,17 @@ jobs:
 
       - name: Check for sensitive data
         run: |
-          # Basic check for potential secrets in code
-          if grep -r -i "password\|secret\|key\|token" supabase/functions/ --include="*.ts" --include="*.js" | grep -v "test" | grep -v "mock" | grep -v "header\|env\|param"; then
-            echo "⚠️  Potential sensitive data found in code"
-            exit 1
-          else
-            echo "✅ No hardcoded sensitive data detected"
-          fi
+            echo "🔍 Scanning for potential secrets and sensitive data..."
+
+            if grep -r -E --include="*.ts" --include="*.js" \
+            '(["'\''](password|secret|token|api[_-]?key|bearer|private[_-]?key|credential)[^"'\'']{4,}["'\''])' \
+            supabase/functions/ \
+            | grep -v -E "test|mock|example|sample"; then
+                echo "⚠️  Potential hardcoded secret found!"
+                exit 1
+            else
+                echo "✅ No hardcoded sensitive data detected"
+            fi
 
   performance:
     name: Performance Check
