--- a/infra/killbill/docker-compose.yaml
+++ b/infra/killbill/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: "3.2"
 volumes:
   db:
 services:
@@ -10,7 +10,7 @@ services:
       - KILLBILL_DAO_URL=jdbc:mysql://db:3306/killbill
       - KILLBILL_DAO_USER=root
       - KILLBILL_DAO_PASSWORD=killbill
-      - KILLBILL_CATALOG_URI=SpyCarAdvanced.xml
+      - KILLBILL_CATALOG_URI=plans.xml
   kaui:
     image: killbill/kaui:3.0.9
     ports:
