--- a/infra/killbill/docker-compose.yaml
+++ b/infra/killbill/docker-compose.yaml
@@ -6,11 +6,14 @@ services:
     image: killbill/killbill:0.24.10
     ports:
       - "8080:8080"
+    volumes:
+      - ./shiro.ini:/var/lib/killbill/shiro.ini
     environment:
       - KILLBILL_DAO_URL=jdbc:mysql://db:3306/killbill
       - KILLBILL_DAO_USER=root
       - KILLBILL_DAO_PASSWORD=killbill
       - KILLBILL_CATALOG_URI=plans.xml
+      - KILLBILL_SECURITY_SHIRO_RESOURCE_PATH=file:/var/lib/killbill/shiro.ini
   kaui:
     image: killbill/kaui:3.0.9
     ports:
