feat: update Kill Bill API key and secret examples, rename upload script

--- a/.env.example
+++ b/.env.example
@@ -38,12 +38,14 @@ EXTERNAL_KEYCLOAK_URL=
 KILLBILL_BASE_URL=http://127.0.0.1:8080
 
 # Kill Bill API Authentication
-# API key and secret for Kill Bill API access
-KILLBILL_API_KEY=kuala
-KILLBILL_API_SECRET=kuala
+# API key and secret for Kill Bill API access base on tenant
+# EXAMPLE VALUES (DO NOT USE IN PRODUCTION)
+KILLBILL_API_KEY=demo 
+KILLBILL_API_SECRET=demosecret
 
 # Kill Bill Basic Authentication
 # Username and password for Kill Bill admin access
+# EXAMPLE VALUES (DO NOT USE IN PRODUCTION)
 KILLBILL_USERNAME=admin
 KILLBILL_PASSWORD=password
 
