--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,17 @@ jobs:
       - name: Format check
         run: |
           cd supabase/functions
-          deno fmt --check
+          deno fmt --check "**/*.ts"
+          if [ $? -ne 0 ]; then
+            echo "Fixing format issues..."
+            deno fmt "**/*.ts"
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git add .
+            git commit -m "style: auto-format code with deno fmt"
+            git push
+            exit 1
+          fi
 
   test:
     name: Run Tests
