feat(auth): implement user authentication middleware and helper functions

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,11 @@ KILLBILL_API_SECRET=demosecret
 KILLBILL_USERNAME=admin
 KILLBILL_PASSWORD=password
 
+# Kill Bill Default Currency
+# Default currency code for billing operations
+# Example: USD, EUR, GBP
+KILLBILL_DEFAULT_CURRENCY=USD
+
 # =============================================================================
 # ENTERPRISE CONTACT CONFIGURATION
 # =============================================================================
