feat(cors): implement CORS configuration and middleware with environment variable support

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,34 @@ KILLBILL_PASSWORD=password
 ENTERPRISE_CONTACT_EMAIL=
 ENTERPRISE_CONTACT_PHONE=
 ENTERPRISE_CONTACT_MESSAGE=
+
+# =============================================================================
+# CORS CONFIGURATION
+# =============================================================================
+
+# Enable or disable CORS middleware
+# true  = CORS handled by application (default)
+# false = CORS handled by proxy/load balancer
+CORS_ENABLED=true
+
+# Allowed origins for CORS (comma-separated)
+# "*" = Allow all origins (default, use only for development)
+# Single origin example: http://localhost:4200
+# Multiple origins example: http://localhost:4200,https://kuala-staging.seribasa.digital,https://kuala.seribasa.digital
+CORS_ORIGIN=*
+
+# DEVELOPMENT EXAMPLES:
+# CORS_ENABLED=true
+# CORS_ORIGIN=http://localhost:4200
+
+# STAGING EXAMPLE:
+# CORS_ENABLED=true
+# CORS_ORIGIN=https://kuala-staging.seribasa.digital
+
+# PRODUCTION EXAMPLE (Multiple domains):
+# CORS_ENABLED=true
+# CORS_ORIGIN=https://kuala.seribasa.digital,https://app.seribasa.digital
+
+# PRODUCTION WITH PROXY/LB HANDLING CORS:
+# CORS_ENABLED=false
+# CORS_ORIGIN= (not used when disabled)
